Bug 1274030 - clean VideoFrameContainer when "xpcom-shutdown" event received. r=cpearce

MozReview-Commit-ID: 92zeiNXSkjf